Closed
Bug 201423
Opened 22 years ago
Closed 22 years ago
Crash [@ nsWebShell::Create] if urildr.dll is missing
Categories
(Core :: DOM: Navigation, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: timeless, Assigned: timeless)
Details
(Keywords: crash)
Crash Data
Attachments
(1 file)
|
2.33 KB,
patch
|
adamlock
:
review+
bzbarsky
:
superreview+
|
Details | Diff | Splinter Review |
Comment 1•22 years ago
|
||
Build ID 2003022404
Trigger Time 2003-04-09 16:55:10
Platform Win32
Operating System Windows NT 5.0 build 2195
Module docshell.dll
URL visited no urildr.dll
User Comments
Trigger Reason Access violation
Source File Name c:/builds/seamonkey/mozilla/docshell/base/nsWebShell.cpp
Trigger Line No. 1233
Stack Trace
nsWebShell::Create [c:/builds/seamonkey/mozilla/docshell/base/nsWebShell.cpp,
line 1233]
nsWebShellWindow::Initialize
[c:/builds/seamonkey/mozilla/xpfe/appshell/src/nsWebShellWindow.cpp, line 330]
nsAppShellService::JustCreateTopWindow
[c:/builds/seamonkey/mozilla/xpfe/appshell/src/nsAppShellService.cpp, line 824]
nsAppShellService::CreateHiddenWindow
[c:/builds/seamonkey/mozilla/xpfe/appshell/src/nsAppShellService.cpp, line 447]
main1 [c:/builds/seamonkey/mozilla/xpfe/bootstrap/nsAppRunner.cpp, line 1222]
main [c:/builds/seamonkey/mozilla/xpfe/bootstrap/nsAppRunner.cpp, line 1639]
WinMain [c:/builds/seamonkey/mozilla/xpfe/bootstrap/nsAppRunner.cpp, line 1660]
WinMainCRTStartup()
KERNEL32.DLL + 0x7903 (0x77e87903)
Comment 2•22 years ago
|
||
// HACK....force the uri loader to give us a load cookie for this
webshell...then get it's
// doc loader and store it...as more of the docshell lands, we'll be able to
get rid
// of this hack...
nsCOMPtr<nsIURILoader> uriLoader = do_GetService(NS_URI_LOADER_CONTRACTID);
uriLoader->GetDocumentLoaderForContext(NS_STATIC_CAST(nsIWebShell*, this),
getter_AddRefs(mDocLoader));
That would be the culprit...
The uriloader is statically linked into docshell and has been since Doug checked
in bug 194240.
Is this a problem with a duff registry?
Attachment #120071 -
Flags: superreview?(bzbarsky)
Attachment #120071 -
Flags: review?(adamlock)
Comment on attachment 120071 [details] [diff] [review]
this can fail for OOM and other cases.
r=adamlock
Attachment #120071 -
Flags: review?(adamlock) → review+
Updated•22 years ago
|
Attachment #120071 -
Flags: superreview?(bzbarsky) → superreview+
checked in
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Updated•14 years ago
|
Crash Signature: [@ nsWebShell::Create]
You need to log in
before you can comment on or make changes to this bug.
Description
•